--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,21 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "start": "nodemon server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "pg": "^8.11.0"
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
