--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
