--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "pg": "^8.10.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
