--- a/backend/package.json
+++ b/backend/package.json
@@ -14,9 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
     "path": "^0.12.7",
     "pg": "^8.10.0",
+    "react-router-dom": "^6.11.2",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13"
   },
